[tool.poetry]
name = "packet_format"
version = "0.1.0"
description = ""
authors = ["Bjorn Harpe <bjorn@ouelong.com>"]

[tool.pyright]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.24.1"
rich = "^10.4.0"
pytest = "^6.2.4"
hypothesis = "^6.14.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
